# personal-ai-assistant

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  README.md  check_latest_run.py  check_mlflow.py  cleanup_runs.py  docker-compose.yml  eval_results.json  pyproject.toml  requirements.txt  test_guardrails.py  test_moderation_api.py  test_security_response.py  vision-memory.md  vision.md
.claude/: settings.local.json
.github/: copilot-instructions.md
docker/: .env.example  Dockerfile  Dockerfile.frontend  Dockerfile.mlflow  docker-compose.api.yml  docker-compose.eval.yml  docker-compose.frontend.yml  docker-compose.mlflow.yml  docker-compose.yml  init-pgvector.sql
eval/: __init__.py  __main__.py  agent_metadata.py  alfred_judge.py  alfred_models.py  assistant.py  config.py  contradiction_handling_golden_dataset.json  dataset.py  error_recovery_golden_dataset.json  golden_dataset.json  graph_extraction_golden_dataset.json  graph_extraction_judge.py  judge.py  knowledge_connections_golden_dataset.json  long_conversation_golden_dataset.json  memory_golden_dataset.json  memory_informed_golden_dataset.json  memory_judge.py  memory_write_golden_dataset.json  memory_write_judge.py  mlflow_datasets.py  models.py  multi_cap_golden_dataset.json  notification_judgment_golden_dataset.json  onboarding_golden_dataset.json  onboarding_judge.py  onboarding_models.py  pipeline_config.py  proactive_golden_dataset.json  returning_greeting_golden_dataset.json  routing_golden_dataset.json  runner.py  schedule_cron_golden_dataset.json  security_golden_dataset.json  (+2 more)
src/: config.py  (+2 more)
(+395 files in other folders)
