[project]
name = "personal-ai-assistant"
version = "0.2.0"
description = "A FastAPI-based streaming chat API with OpenAI Agents SDK and LLM-as-a-judge evaluation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Core API
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.1.0",
    # OpenAI Agents SDK
    "openai-agents>=0.0.1",
    # Logging
    "structlog>=24.1.0",
    # Development
    "python-dotenv>=1.0.0",
    # Evaluation Framework (Feature 002)
    "mlflow>=3.8.1",
    "litellm>=1.81.5",
    # Memory Feature (Feature 004)
    "asyncpg>=0.29.0",
    "pgvector>=0.3.0",
    "redis>=5.0.0",
    "tiktoken>=0.7.0",
    "openai>=1.0.0",
    # Weather Feature (Feature 005)
    "httpx>=0.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.4",
    "pytest-asyncio>=0.23.3",
    "httpx>=0.26.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src", "eval"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"

[dependency-groups]
dev = [
    "pytest>=7.4.4",
    "pytest-asyncio>=0.23.3",
    "httpx>=0.26.0",
    "pytest-cov>=7.0.0",
]
